# synara-highmark-v3.5

./: Cargo.toml  Dockerfile  Dockerfile.harmonic  Dockerfile.python  Dockerfile.rust  Handshake.dart  README.md  SIN-LATTICE DASHBOARD.ASCII  Sovereign_Relayer.py  Thermodynamic_Audit.py  __init__  authenticity.md  docker-compose.yml  eeg_sovereignty_bridge.py  index.html  install_bushrouter.sh  intercept_response  metrics.go  observer_proxy.py  pi_r_engine.py  propagation_v2.go  proxy_server.py  sovereign_handshake.dart  transport_v2.go  truth.json  visualize_soliton_route.py  zuna_enhancer_fused.py
.github/workflows/: sovereign-notary.yml
core/: soliton_resonance_memory.py  zuna_enhancer_fused.py
inference_backend/src/: glyph.rs  main.rs
lib/: il7_coil_driver.dart  relational_mesh_bridge.dart
proto/: inference.proto
src/: glyph.rs  main.rs  model.rs
src/core/: Psyselsic_Trinity_Ignition.py  Wetware_Feedback_Processor.py
synara-sovereign-deployment/: manifest.synara.yaml
union/cli/: crawler.py
