[package]
name = "isst-toft-inference-backend"
version = "1.6.0"
edition = "2024"
authors = ["Flamekeeper <john@sovereignvessel.alaska>"]
license = "Apache-2.0"
description = "Rad-hard Candle + gRPC inference backend for ISST-TOFT sovereign stack"

[dependencies]
candle-core = { version = "0.9", features = ["cuda"] }
candle-nn = { version = "0.9" }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"  # for deterministic seeds if needed

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "isst-toft-backend"
path = "src/main.rs"